Add bundle identifier to Info.plist

--- a/MinuteMind/Info.plist
+++ b/MinuteMind/Info.plist
@@ -4,6 +4,8 @@
 <dict>
     <key>CFBundleName</key>
     <string>MinuteMind</string>
+    <key>CFBundleIdentifier</key>
+    <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
     <key>OPENAI_API_KEY</key>
     <string></string>
 </dict>
